# ocaml-playground

./: .gitignore  README.md
bandit/: README.md
bandit/lib/: dune  obandit.ml
bandit/tests/: test.ml
classifyDigits/: '  classifyDigits  classifyDigits.cmi  classifyDigits.ml
cmdliner/: dune  main.ml
cmdliner/lib/: dune  err.ml  trie.ml
command_line_parser/: dune-project
command_line_parser/lib/: dune
command_line_parser/test/: dune
exercises/: README.md  make_exercise_proj.sh
exercises/01_introduction/: dune  problem.ml
exercises/02_basic_types/: dune  problem.ml
exercises/05_twice/: dune  problem.ml
exercises/07_simple_recursion/: dune  problem.ml
exercises/08_list_intro/: dune  problem.ml
exercises/10_higher_order_functions/: dune  problem.ml
exercises/12_list_functions/: dune  problem.ml
exercises/13_arrays/: dune  problem.ml
exercises/14_variants/: dune  problem.ml
exercises/15_options/: problem.ml
exercises/16_records/: problem.ml
exercises/18_mutable_records/: dune  problem.ml
exercises/21_reading_sigs/: problem.ml
http_client/: dune  list.html  main.ml
json/: dune  parse_bool.ml  read_json.ml
jsonrpc/src/: client.ml  client_intf.ml  dune  errors.ml  types.ml
jsonrpc/test/: dune  test_main.ml
labltk_exe/: dune-project
labltk_exe/lib/: bank.ml  dune
labltk_exe/test/: dune  labltk_exe.ml
lambdasoup_exe/: dune-project
lambdasoup_exe/lib/: dune
lambdasoup_exe/test/: dune
map_hash_exe/: dune-project
map_hash_exe/lib/: dune
map_hash_exe/test/: dune
my_lwt/: lwt.ml
okiraku/: Stack.ml
(+1 files in other folders)
