(executable
 (name main)
 (libraries core cohttp-lwt-unix yojson lambdasoup))


(env
  (dev
    (flags (:standard
            -w -20 
            -w -26 
            -w -27 
            -w -32 
            -w -33
            -w -34 
            -w -37 
            -w -39)))
  (release 
   (flags (:standard))))